hard-gists/8414494/run.log
=== Docker Run Log for 8414494 ===
Started at: Mi 29. Okt 17:47:55 CET 2025

[2025-10-29 17:47:55] START: Running container for 8414494
[2025-10-29 17:47:56] SUCCESS: Container 4e8f3b076816e7a5190cbcc56586504ddb312ad3ac9270b8ae9d8de50e31506f started for 8414494
=== Container logs for 8414494 ===
  File "/snippet.py", line 109
    print af
    ^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 8414494 ===
[2025-10-29 17:47:58] INFO: Container 4e8f3b076816e7a5190cbcc56586504ddb312ad3ac9270b8ae9d8de50e31506f has stopped
